adicionando geração dinamica dos filmes

--- a/index.html
+++ b/index.html
@@ -21,50 +21,8 @@
         </div>
     </header>
     <main>
-        <div class="filmes-container">
-            <div class="filme">
-                <img src="assets/image 3.svg" alt="" class="filme_img">
-                <div class="filme_informacoes">
-                    <span class="filme-informacoes_titulo">Batman (2022)</span>
-                    <div class="filme-informacoes_quantitativas">
-                        <div class="filme-informacoes_nota">
-                            <i class="fa-solid fa-star"></i>
-                            <span>9.4</span>
-                        </div>
-                        <div class="filme-informacoes_favoritar">
-                            <i class="fa-regular fa-heart"></i>
-                            <span>Favoritar</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="filme-sinopse">
-                    <span>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dicta consectetur repudiandae laboriosam harum a ipsa voluptate neque, corporis labore adipisci culpa cum explicabo dolores facilis error praesentium iure autem.
-                    </span>
-                </div>
-            </div>
-            <div class="filme">
-                <img src="assets/image 2.svg" alt="" class="filme_img">
-                <div class="filme_informacoes">
-                    <span class="filme-informacoes_titulo">Doctor Strange in the Multiverse of Madness</span>
-                    <div class="filme-informacoes_quantitativas">
-                        <div class="filme-informacoes_nota">
-                            <i class="fa-solid fa-star"></i>
-                            <span>8.5</span>
-                        </div>
-                        <div class="filme-informacoes_favoritar">
-                            <i class="fa-regular fa-heart"></i>
-                            <span>Favoritar</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="filme-sinopse">
-                    <span>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus dicta consectetur repudiandae laboriosam harum a ipsa voluptate neque, corporis labore adipisci culpa cum explicabo dolores facilis error praesentium iure autem.
-                    </span>
-                </div>
-            </div>
-        </div>
+        <div class="filmes-container"></div>
     </main>
+    <script src="assets/script.js"></script>
 </body>
 </html>
